--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ken Pink Technical Writer and Web Developer</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
+
 <body>
-    
+    <nav>
+        <div class="logo">Ken Pink | Technical Writer and Web Developer</div>
+        <div class="nav-items">
+            <a href="/">Home</a> 
+            <a href="/">Resume</a> 
+            <a href="/">Portfolio</a>
+            <a href="/">Contact</a>
+        </div>
+    </nav>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="column-left">
+                <h1>Hi, my name is Ken</h1>
+                <p>
+                    I am a technical writer, content manager and web developer
+                </p>
+                <button>Learn More</button>
+            </div>
+            <div class="column-right">
+                <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_omdtysgw.json"  background="transparent"  speed="1"  style="width: 500px; height: 500px;"  loop  autoplay></lottie-player>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
+
