added about section, and timeline section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
         <div class="logo">Ken Pink | Technical Writer and Web Developer</div>
         <div class="nav-items">
-            <a href="/">Home</a> 
-            <a href="/">Resume</a> 
+            <a href="/">Home</a>
+            <a href="/">Resume</a>
             <a href="/">Portfolio</a>
             <a href="/">Contact</a>
         </div>
@@ -27,14 +27,89 @@
                 <p>
                     I am a technical writer, content manager and web developer
                 </p>
-                <button>Learn More</button>
+                <button><a href="#about">Learn More</a></button>
             </div>
             <div class="column-right">
-                <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_omdtysgw.json"  background="transparent"  speed="1"  style="width: 500px; height: 500px;"  loop  autoplay></lottie-player>
+                <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_omdtysgw.json"
+                    background="transparent" speed="1" style="width: 500px; height: 500px;" loop autoplay>
+                </lottie-player>
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="about-container">
+            <div class="column-left-about">
+                <img src="assets/about-coder.svg" alt="coder thinking about code" width="500" height="500">
+            </div>
+            <div class="column-right-about">
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error voluptate hic vitae esse ullam earum
+                    fugiat recusandae quae asperiores provident eaque sunt necessitatibus qui, incidunt tempora mollitia
+                    beatae, praesentium modi!</p>
+                <button>Learn More</button>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <div id="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <!--img src="assets/images/star.svg" alt=""-->
+                        <i class="fa fa-refresh fa-spin fa-3x fa-fw"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h2>LOREM IPSUM DOLOR</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+                        </p>
+                    </div>
+                </div>
+        
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <!--img src="assets/images/book.svg" alt=""-->
+                        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+                    </div>
+                    <div class="timeline-content right">
+                        <h2>LOREM IPSUM DOLOR</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi  ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+                        </p>
+                    </div>
+                </div>
+        
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <!--img src="assets/images/star.svg" alt=""-->
+                        <!--i class="fa fa-cog fa-spin fa-3x fa-fw"></i-->
+                        <i class="fa fa-free-code-camp fa-2x simi-i"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h2>LOREM IPSUM DOLOR</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- Timeline ends here -->
+        </div>
+        </div>
+        <section class="contact">
+            <div class="contact-container">
+                <div class="column-left">
+                    <h1>Let's work together!</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius nam et numquam soluta laborum placeat deserunt doloribus dolores atque, sint doloremque corrupti ullam quam! Ab accusamus laboriosam totam expedita doloremque.
+                    </p>
+                    <button><a href="#">Contact Me</a></button>
+                </div>
+                <div class="column-right">
+                    <img src="assets/SeaShip-day.gif" alt=sailboat-at-sea-in-daytime>
+                </div>
+            </div>
+        </section>
 </body>
 
 </html>
-
