add contact section

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
                   <a class="navbar-item">
                     Portfolio
                   </a>
-                  <a class="navbar-item">
+                  <a class="navbar-item" href="#contact">
                     Contact
                   </a>
             </div>
           </div>
     </nav>
-    <!-- Navigation Menu End-->
+  
     <!-- Hero Section Start -->
     <section class="hero is-halfheight">
         <div class="container is-fluid">
             <div class="columns">
                 <div class="column is-align-self-center">
                     <div class="content is-med">
-                    <h1>Hi, my name is Jane</h1>
+                    <h1>Hi, my name is <strong style="color:#00b0ff">Jane</strong></h1>
                 <p>
                     I am Front End Developer and mechanical keyboard enthuiast!
                 </p>
@@ -64,9 +64,8 @@
               </div>
           </div>
       </section>
-      <!-- Hero Section End -->
+  
       <!-- About Section Start-->
-    
       <section class="section is-med" id="about">
         <div class="container is-fluid">
             <div class="columns">
@@ -90,7 +89,7 @@
         </div>
     </section>
 
-      <!-- About End -->
+      <!-- Timeline Start -->
     <div class="container">
         <div id="timeline">
                 <div class="timeline-item">
@@ -131,20 +130,26 @@
                     </div>
                 </div>
             </div>
-            <!-- Timeline ends here -->
         </div>
-        </div>
-        <section class="contact">
-            <div class="contact-container">
-                <div class="column-left">
-                    <h1>Let's work together!</h1>
+         <!-- Contact Section -->
+        <section class="section is-med" id="contact">
+            <div class="container is-fluid">
+                <div class="columns">
+                    <div class="column is-align-self-center">
+                    <div class="content is-med">
+                        <h2>Let's Work Together!</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius nam et numquam soluta laborum placeat deserunt doloribus dolores atque, sint doloremque corrupti ullam quam! Ab accusamus laboriosam totam expedita doloremque.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus atque impedit esse vel ipsa eligendi facere eaque hic ipsam natus molestiae odio vero cupiditate maiores delectus, quaerat suscipit officiis. Soluta!
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque unde libero ipsa adipisci earum facilis officia voluptate nostrum tempora vel similique, sequi explicabo placeat cumque et doloremque, totam consectetur saepe.
                     </p>
-                    <button><a href="#">Contact Me</a></button>
-                </div>
-                <div class="column-right">
-                    <img src="assets/SeaShip-day.gif" alt=sailboat-at-sea-in-daytime>
+                    <a class="button is-info is-outlined is-rounded" href="#">Contact Me</a>
+                    </div>
+                    </div>
+                    <div class="column">
+                        <figure class="image is-5by4">
+                            <img src="./assets//SeaShip-day.gif" alt="sailboat in the day time">
+                          </figure>
+                    </div>
                 </div>
             </div>
         </section>
