add hover animation

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     <div class="timeline-icon">
                     </div>
                     <div class="timeline-content">
-                        <h3>September 2012 - May 2016</h3>
+                        <h3>September 2012</h3>
                         <p>
-                           Bachelor of Design in User Experience Design, Wilfred Laurier University 
+                           Started schooling at Wilfred Laurier University in User Experience Design 
                         </p>
                     </div>
                 </div>
@@ -109,9 +109,9 @@
                     <div class="timeline-icon">
                     </div>
                     <div class="timeline-content right">
-                        <h3>LOREM IPSUM DOLOR</h3>
+                        <h3>May 2013 - September 2013</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi  ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+                        Internship at Tangerine Bank on their UX/UI team
                         </p>
                     </div>
                 </div>
@@ -120,12 +120,46 @@
                     <div class="timeline-icon">
                     </div>
                     <div class="timeline-content">
-                        <h3>LOREM IPSUM DOLOR</h3>
+                        <h3>October 2013 - April 2014</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+                            Work/study term in Stockholm, Sweden at Stockholm University and Spotify
                         </p>
                     </div>
                 </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                    </div>
+                    <div class="timeline-content right">
+                        <h3>May 2014 - December 2014</h3>
+                        <p>
+                            Internship with Microsoft on their Front End team
+                        </p>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                    </div>
+                    <div class="timeline-content">
+                        <h3>May 2016</h3>
+                        <p>
+                        Graduated with Bachelor of Design in User Experience Design at Wilfred Laurier University
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                    </div>
+                    <div class="timeline-content right">
+                        <h3>June 2016 - Present</h3>
+                        <p>
+                            Front End Developer at Netflix
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
          <!-- Contact Section -->
@@ -139,7 +173,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus atque impedit esse vel ipsa eligendi facere eaque hic ipsam natus molestiae odio vero cupiditate maiores delectus, quaerat suscipit officiis. Soluta!
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque unde libero ipsa adipisci earum facilis officia voluptate nostrum tempora vel similique, sequi explicabo placeat cumque et doloremque, totam consectetur saepe.
                     </p>
-                    <a class="button is-info is-outlined is-rounded" href="#">Contact Me</a>
+                    <a class="button is-info is-outlined is-rounded" href="mailto:youremailadrress@email.com" target="_blank" rel="noopener noreferrer">Contact Me</a>
                     </div>
                     </div>
                     <div class="column">
@@ -153,7 +187,7 @@
         <footer class="footer">
             <div class="content has-text-centered">
             <span class="icon is-large">
-                <a href="#top" class="has-text-grey-light">
+                <a class="has-text-grey-light" href="#top" >
                 <i class="far fa-arrow-alt-circle-up fa-2x"></i>
                 </a>
               </span>
