add portfolio page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navigation Menu Start-->
     <nav class="navbar is-transparent" id="top">
         <div class="navbar-brand">
-            <a class="navbar-item" href="http://127.0.0.1:5500/index.html">
+            <a class="navbar-item" href="#">
               Jane Smith | Front End Developer
             </a>
         
@@ -34,7 +34,7 @@
                     Resume
                   </a>
             
-                  <a class="navbar-item has-text-info">
+                  <a class="navbar-item has-text-info" href="portfolio.html">
                     Portfolio
                   </a>
                   <a class="navbar-item has-text-info" href="#contact">
@@ -83,7 +83,7 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque unde libero ipsa adipisci earum facilis officia voluptate nostrum tempora vel similique, sequi explicabo placeat cumque et doloremque, totam consectetur saepe.
                 </p>
                 <a class="button is-info is-outlined is-rounded" href="#">My Resume</a>
-                <a class="button is-info is-outlined is-rounded" href="#about">My Portfolio</a>
+                <a class="button is-info is-outlined is-rounded" href="portfolio.html">My Portfolio</a>
                 </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                 <i class="fab fa-codepen fa-2x"></i>
               </span>
               <hr>
-              <p>©2021 Jane Doe</p>
+              <p>©2021 Jane Smith</p>
             </div>
         </footer>
 </body>
